# gaiseco

./: README.md
server-module/gaiseco-flask-webserver/: LICENSE.txt  README.rst  pyproject.toml
server-module/gaiseco-flask-webserver/analyzer/: Testes.ipynb  br_caepf_recognizer.py  br_cep_recognizer.py  br_cnj_recognizer.py  br_cnpj_recognizer.py  br_cpf_recognizer.py  br_rg_recognizer.py  br_titulo_eleitor_recognizer.py  pdf_extractor.py  presidio_checker.py
server-module/gaiseco-flask-webserver/dados-teste/cnj/: lista1.txt
server-module/gaiseco-flask-webserver/dados-teste/diario-oficial-estado-rj/: IOERJ-01-abril.txt  IOERJ-02-abril.txt  IOERJ-03-abril.txt  IOERJ-04-abril.txt  IOERJ-05-maio.txt  IOERJ-06-maio.txt  IOERJ-07-abril.txt  IOERJ-07-maio.txt  IOERJ-08-abril.txt  IOERJ-09-abril.txt  IOERJ-10-abril.txt  IOERJ-11-abril.txt  IOERJ-14-abril.txt  IOERJ-15-abril.txt  IOERJ-16-abril.txt  IOERJ-17-abril.txt  IOERJ-25-abril.txt  IOERJ-28-abril.txt  IOERJ-29-abril.txt  IOERJ-30-abril.txt
server-module/gaiseco-flask-webserver/dados-teste/resultado-concursos/: 11971_profmat_exame_nacional_de_acesso_listagem_de_candiatos_por_sala.txt  ESTAGIARIOS-ABRIL-2024.txt  EditaldeDivulgaCAo-ClassificaCAoFinal-1.txt  PROCESSO_SELETIVO_SENAI.txt  limeira-sp.txt  lista_dos_candidatos_ao_conselho_de_cultura.txt  ouvidor-go.txt  viscondedoriobranco-mg.txt
server-module/gaiseco-flask-webserver/gaiseco/: __init__.py  auth.py  check.py  config.py  db.py  email.py  pages.py  schema.sql  utils.py
server-module/gaiseco-flask-webserver/instance/: gaiseco.sqlite
(+28 files in other folders)
